# Deep-Learning-BTCUSD

./: .env.example  .gitignore  CLAUDE.md  ChangeTrainGui.md  OPTIMIERUNGSPLAN.md  PLAN.md  pyproject.toml  requirements-backtesting.txt  requirements.txt
docs/: create_project_flowchart.py
docs/plans/: PROJECT_GOALS.md  PROJECT_GOALS_MERMAID.md  feature-pipeline-flowcharts.md  feature-pipeline-modul.md  project-architecture-flowchart.md
src/btcusd_analyzer/: __init__.py  main.py
src/btcusd_analyzer/backtester/: __init__.py  backtrader_engine.py  result_manager.py  walk_forward.py
src/btcusd_analyzer/backtesting/: __init__.py  backtester.py  base.py  metrics.py
src/btcusd_analyzer/backtesting/adapters/: __init__.py  backtestingpy.py  backtrader.py  factory.py  vectorbt.py
src/btcusd_analyzer/core/: __init__.py  config.py  exceptions.py  logger.py  save_manager.py  session_database.py  session_manager.py
src/btcusd_analyzer/data/: __init__.py  downloader.py  processor.py  reader.py
src/btcusd_analyzer/gui/: __init__.py  backtest_window.py  backtrader_window.py  chart_widget.py  features_chart_widget.py  main_window.py  peaks_chart_widget.py  prepare_data_window.py  profiling_dialog.py  save_confirm_dialog.py  session_loader_dialog.py  session_manager_window.py  styles.py  trading_window.py  training_window.py  visualize_data_window.py  walk_forward_window.py
src/btcusd_analyzer/gui/backtest/: __init__.py  (+6 more)
src/btcusd_analyzer/models/: __init__.py  base.py  bilstm.py  cnn.py  cnn_lstm.py  factory.py  gru.py  hf_transformer.py  patchtst.py  transformer.py
src/btcusd_analyzer/optimization/: __init__.py  optuna_tuner.py
src/btcusd_analyzer/trading/: __init__.py  api_config.py  binance_client.py  live_trader.py  order_manager.py  risk_manager.py  websocket_handler.py
src/btcusd_analyzer/trainer/: __init__.py  callbacks.py  trainer.py
src/btcusd_analyzer/training/: __init__.py  auto_trainer.py  labeler.py  normalizer.py  peak_finder.py  sequence.py
src/btcusd_analyzer/utils/: __init__.py  helpers.py
src/btcusd_analyzer/web/: __init__.py  routes.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_models.py  test_normalizer.py  test_processor.py  test_reader.py
(+17 files in other folders)
